HandleUpdateAsync - HandleErrorAsync created

--- a/GhostText/appsettings.json
+++ b/GhostText/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "TelegramSettings": {
+    "BotToken": "",
+    "ChannelId": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
