--- a/GhostText/GhostText.csproj
+++ b/GhostText/GhostText.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Telegram.Bot" Version="22.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Clients\" />
+  </ItemGroup>
+
 </Project>
