--- a/GhostText/appsettings.json
+++ b/GhostText/appsettings.json
@@ -1,9 +1,20 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=GhostText123;Username=postgres;Password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "TelegramSettings": {
+    "BotToken": "8381407737:AAGJ-j-Y0sxvk-ow19CAX1fOUM5x8aqlRCA",
+    "ChannelId": -1002766816339
+  },
+  "AuthConfiguration": {
+    "Key": "2ed00a05-debb-40c5-9da2-39416510b0be",
+    "Issuer": "DevTips",
+    "Audience": "DevTips"
+  }
 }
